Add merchant API CRUD endpoints
