# config/routes.rb
@@ -651,7 +651,9 @@ Rails.application.routes.draw do
       resources :budgets, only: [ :index, :show ]
       resources :budget_categories, only: [ :index, :show ]
       resources :categories, only: [ :index, :show, :create ]
-      resources :merchants, only: [ :index, :show, :create ]
+      resources :merchants, only: [ :index, :show, :create, :update, :destroy ] do
+        post :import, on: :collection
+      end
       resources :rules, only: [ :index, :show ]
       resources :rule_runs, only: [ :index, :show ]
       resources :securities, only: [ :index, :show ]
